[gd_scene load_steps=6 format=3 uid="uid://detc58f4aqwsg"]

[ext_resource type="PackedScene" uid="uid://doowxghwr1dqt" path="res://assets/boss/flyning_monster.glb" id="1_dlmty"]
[ext_resource type="Script" uid="uid://qhyopk5fxpgv" path="res://scenes/boss.gd" id="1_neq0i"]

[sub_resource type="SphereShape3D" id="SphereShape3D_neq0i"]
radius = 8.12607

[sub_resource type="SphereShape3D" id="SphereShape3D_jncid"]
radius = 0.645085

[sub_resource type="BoxShape3D" id="BoxShape3D_neq0i"]
size = Vector3(112.952, 16.0097, 1)

[node name="Boss" type="CharacterBody3D"]
script = ExtResource("1_neq0i")

[node name="Sketchfab_Scene" parent="." instance=ExtResource("1_dlmty")]
transform = Transform3D(0.013, 0, 0, 0, 0.013, 0, 0, 0, 0.013, 0, 0, 0)

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(0.0234726, 0, 0.999725, 0, 1, 0, -0.999725, 0, 0.0234726, 0, 0, 0.373914)
light_color = Color(0.670507, 0.372343, 1, 1)
light_energy = 100.0

[node name="BigCollission" type="CollisionShape3D" parent="."]
transform = Transform3D(0.962379, 0, -0.271709, 0, 1, 0, 0.271709, 0, 0.962379, 0, 0, 0)
shape = SubResource("SphereShape3D_neq0i")

[node name="SmallCollission" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_jncid")
disabled = true

[node name="FlatCollission" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.08496, 3.72331, 1.09421)
shape = SubResource("BoxShape3D_neq0i")
